# Honours-Project

./: .gitignore  BuildWindows.bat  CMakeLists.txt  LICENSE  README.md  RunTests.bat  RunTests.sh
cmake/: FindOpenCLCustom.cmake
src/: CMakeLists.txt
src/DeployTest/: CMakeLists.txt  Timer.cpp  Timer.h  clsort2.cpp  clsort2.h  compressor_cuda_bitreducer.cpp  compressor_cuda_bitreducer.h  compressor_cuda_bitreducer_kernel.cu  cudaExp.cpp  cudaExp.h  cudaSort.cpp  cudaSort.h  cuda_gfc_compress_kernel.cu  cuda_utils.cpp  cuda_utils.h  cudasortkernel.cu  donothing.cu  exp_cl_pingpong.cpp  exp_cl_pingpong.h  exp_cl_sort.cpp  exp_cl_sort.h  exp_cl_sort2.cpp  exp_cl_sort2.h  exp_cpu_bit_reducer.cpp  exp_cpu_bit_reducer.h  exp_cuda_compression.cpp  exp_cuda_compression.h  exp_cuda_pingpong.cpp  exp_cuda_pingpong.h  exp_cuda_sort.cpp  exp_cuda_sort.h  exp_cuda_sort_single.cpp  exp_cuda_sort_single.h  exp_gfc.cpp  exp_gfc.h  experiment.cpp  experiment.h  ezOptionParser.hpp  hello.cl  main.cpp  (+15 more)
src/dx12/: D3D12.sln  D3D12nBodyGravity.cpp
src/dx12/compute/: D3D12compute.cpp  D3D12compute.h  D3D12compute.vcxproj  D3D12compute.vcxproj.filters  Main.cpp
src/dx12/nbody/: D3D12nBodyGravity.h  D3D12nBodyGravity.vcxproj  stdafx.h
src/dx12/readback/: main.cpp  readback.hlsl  readback.vcxproj  readback.vcxproj.filters  stdafx.h
src/dx12/sort/: GpuDX12ParrallelSort2262144_Thu_Dec_10_16-03-03_2015.csv  Timer.cpp  Timer.h  main.cpp  sort.hlsl  sort.vcxproj  sort.vcxproj.filters  stdafx.h
tests/: merge.html  merge.js
